# Whytrail

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MEMORY.md  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml  test-matrix.yml
benchmarks/: test_overhead.py
docs/: api-stability.md  explanation-engine.md  plugin-guide.md  quickstart.md  roadmap.md  testing-maturity.md
docs/adr/: 0001-whytrail-architecture.md  0002-category-strategy.md  0003-ecosystem-scale-triage.md  0004-rename-to-whytrail.md  0005-vscode-extension-scope.md  0006-unify-plugins-into-extras.md  0007-explanation-engine-reframe.md  0008-explanation-engine-invariants.md  0009-install-hook-flagship-feature.md  0010-positioning-why-not-where.md  0011-provenance-vocabulary-is-already-sufficient.md  0012-provenance-model-boundaries.md
examples/: ex_cli_crash.py  ex_django.py  ex_fastapi.py  ex_flask.py  ex_install_hook.py  ex_logging.py  ex_loguru.py  ex_numpy_demo.py  ex_provenance_patterns.py  ex_pytest_fixtures.py  ex_pytest_tracked_values.py  ex_structlog.py  ex_tracked_pipeline.py
plugins/whytrail-aiohttp/: README.md  pyproject.toml
plugins/whytrail-aiohttp/src/whytrail_aiohttp/: __init__.py
plugins/whytrail-anthropic/: README.md  pyproject.toml
plugins/whytrail-anthropic/src/whytrail_anthropic/: __init__.py
plugins/whytrail-asyncpg/: README.md  pyproject.toml
plugins/whytrail-asyncpg/src/whytrail_asyncpg/: __init__.py
plugins/whytrail-boto3/: README.md  pyproject.toml
plugins/whytrail-boto3/src/whytrail_boto3/: __init__.py
plugins/whytrail-celery/: README.md  pyproject.toml
plugins/whytrail-celery/src/whytrail_celery/: __init__.py
plugins/whytrail-ddtrace/: README.md  pyproject.toml
plugins/whytrail-ddtrace/src/whytrail_ddtrace/: __init__.py
plugins/whytrail-django/: README.md  pyproject.toml
plugins/whytrail-django/src/whytrail_django/: __init__.py
plugins/whytrail-dramatiq/: README.md  pyproject.toml
plugins/whytrail-dramatiq/src/whytrail_dramatiq/: __init__.py
plugins/whytrail-fastapi/: README.md  pyproject.toml
plugins/whytrail-fastapi/src/whytrail_fastapi/: __init__.py
plugins/whytrail-flask/: README.md  pyproject.toml
plugins/whytrail-flask/src/whytrail_flask/: __init__.py
plugins/whytrail-google-cloud/: README.md  pyproject.toml
plugins/whytrail-google-cloud/src/whytrail_google_cloud/: __init__.py
plugins/whytrail-grpcio/: README.md  pyproject.toml
plugins/whytrail-grpcio/src/whytrail_grpcio/: __init__.py
plugins/whytrail-httpx/: README.md  pyproject.toml
plugins/whytrail-httpx/src/whytrail_httpx/: __init__.py
plugins/whytrail-huggingface-hub/: README.md  pyproject.toml
plugins/whytrail-huggingface-hub/src/whytrail_huggingface_hub/: __init__.py
plugins/whytrail-jsonschema/: README.md  pyproject.toml
plugins/whytrail-jsonschema/src/whytrail_jsonschema/: __init__.py
plugins/whytrail-langchain/: README.md  pyproject.toml
plugins/whytrail-langchain/src/whytrail_langchain/: __init__.py
plugins/whytrail-marshmallow/: README.md  pyproject.toml
plugins/whytrail-marshmallow/src/whytrail_marshmallow/: __init__.py
plugins/whytrail-openai/: README.md  pyproject.toml
plugins/whytrail-openai/src/whytrail_openai/: __init__.py
plugins/whytrail-pandas/: README.md  pyproject.toml
plugins/whytrail-pandas/src/whytrail_pandas/: __init__.py
plugins/whytrail-polars/: README.md  pyproject.toml
plugins/whytrail-polars/src/whytrail_polars/: __init__.py
plugins/whytrail-prefect/: README.md  pyproject.toml
plugins/whytrail-prefect/src/whytrail_prefect/: __init__.py
plugins/whytrail-pydantic/: README.md  pyproject.toml
plugins/whytrail-pydantic/src/whytrail_pydantic/: __init__.py
plugins/whytrail-pymongo/: README.md  pyproject.toml
plugins/whytrail-pymongo/src/whytrail_pymongo/: __init__.py
plugins/whytrail-pytest/: README.md  pyproject.toml
plugins/whytrail-pytest/src/whytrail_pytest/: plugin.py
plugins/whytrail-pyyaml/: README.md  pyproject.toml
plugins/whytrail-pyyaml/src/whytrail_pyyaml/: __init__.py
plugins/whytrail-requests/: README.md  pyproject.toml
plugins/whytrail-requests/src/whytrail_requests/: __init__.py
plugins/whytrail-rq/: README.md  pyproject.toml
plugins/whytrail-rq/src/whytrail_rq/: __init__.py
plugins/whytrail-scrapy/: README.md  pyproject.toml
plugins/whytrail-scrapy/src/whytrail_scrapy/: __init__.py
plugins/whytrail-sentry/: README.md  pyproject.toml
plugins/whytrail-sentry/src/whytrail_sentry/: __init__.py
plugins/whytrail-sqlalchemy/: README.md  pyproject.toml
scripts/: new_plugin.py
src/whytrail/: __init__.py  _repr.py  config.py  hook.py  otel.py  propagation.py  protocols.py  registry.py
tests/: conftest.py
tests/integration/: test_cli.py  test_config.py  test_deep_trace.py  test_engine_invariants.py  test_graph_soak.py  test_otel.py  test_propagation.py  test_protocol_and_registry.py  test_provenance_boundaries.py  test_provenance_patterns.py  test_stateful_graph.py  test_why_exceptions.py  test_why_tracking.py
tests/plugin_contract/: test_aiohttp_plugin.py  test_aiohttp_server_plugin.py  test_alembic_plugin.py  test_algoliasearch_plugin.py  test_anthropic_plugin.py  test_arango_plugin.py  test_asana_plugin.py  test_asyncpg_plugin.py  test_auth0_plugin.py  test_azure_core_plugin.py  test_boto3_plugin.py  test_bugsnag_plugin.py  test_cassandra_plugin.py  test_celery_plugin.py  test_chromadb_plugin.py  test_clickhouse_plugin.py  test_cohere_plugin.py  test_confluent_kafka_plugin.py  test_dagster_plugin.py  test_datadog_api_client_plugin.py  test_ddtrace_plugin.py  test_discord_plugin.py  test_django_plugin.py  test_docker_plugin.py  test_dramatiq_plugin.py  test_dropbox_plugin.py  test_elastic_apm_plugin.py  test_elasticsearch_plugin.py  test_fastapi_plugin.py  test_firebase_admin_plugin.py  test_flask_plugin.py  test_github_plugin.py  test_google_cloud_plugin.py  test_google_genai_plugin.py  test_graphql_core_plugin.py  test_groq_plugin.py  test_grpcio_plugin.py  test_honeybadger_plugin.py  test_httpx_plugin.py  (+68 more)
(+124 files in other folders)
