[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whytrail"
version = "0.1.0"
description = "Python tells you where. whytrail tells you why."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "whytrail contributors" }]
keywords = ["debugging", "provenance", "explainability", "tracing", "exceptions"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Debuggers",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
rich = ["rich>=13.0"]
cli = ["rich>=13.0"]
otel = ["opentelemetry-api>=1.20"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-benchmark>=4.0",
    "hypothesis>=6.100",
    "rich>=13.0",
    "mypy>=1.10",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocs-include-markdown-plugin>=6.0",
]

[project.scripts]
whytrail = "whytrail.cli.__main__:main"

[project.urls]
Homepage = "https://github.com/bhouvana/Whytrail"
Documentation = "https://bhouvana.github.io/Whytrail/"
Issues = "https://github.com/bhouvana/Whytrail/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/whytrail"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.mypy]
strict = true
files = ["src/whytrail"]
python_version = "3.12"
# Plugins are checked individually in CI (each needs its own third-party
# stubs/dependency installed to type-check meaningfully); this default
# scope covers what every contributor should run locally before a core PR.
#
# python_version pinned to 3.12, independent of whichever interpreter
# actually runs mypy: runtime/monitoring.py's sys.monitoring (PEP 669)
# calls are correctly gated behind `MONITORING_AVAILABLE = hasattr(sys,
# "monitoring")` and never reached on Python <3.12, but typeshed's own
# stub for `sys` only declares `monitoring` for python_version >= 3.12 --
# so mypy invoked from a 3.10/3.11 venv (as CI's `test` job matrix does,
# testing the *package* across 3.10-3.13) flagged every access as
# attr-defined even though the runtime guard is correct. Type-checking
# assumptions shouldn't vary with whichever venv happens to invoke mypy;
# pinning this to the newest version whose stubs cover this module's full
# surface decouples the two, the same way otel.py's override above
# decouples "this import is optional at runtime" from "mypy can resolve
# it." Found the same way as that fix: the first real CI run, which is
# the only place this project's mypy step had ever run under 3.10/3.11 --
# every local run all session used this sandbox's single 3.13 venv.

[[tool.mypy.overrides]]
# otel.py's import is deliberately optional at runtime (lazy import inside
# a try/except, see its own docstring) -- opentelemetry-api lives behind
# the separate `otel` extra, not `dev`, so it's genuinely not installed in
# the environment `pip install -e ".[dev]"` produces (core has zero
# required dependencies by design). Without this override mypy treats
# that as import-not-found and fails strict mode for everyone, including
# contributors who never touch OTel -- found by the first real CI run,
# where mypy passed locally only because an earlier, unrelated task in
# this environment had opentelemetry-api installed already.
module = "opentelemetry.*"
ignore_missing_imports = true

[tool.hatch.metadata]
allow-direct-references = true
