[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whytrail"
version = "0.2.1"
description = "Python tells you where. whytrail tells you why."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "whytrail contributors" }]
keywords = ["debugging", "provenance", "explainability", "tracing", "exceptions"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Debuggers",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
rich = ["rich>=13.0"]
cli = ["rich>=13.0"]
otel = ["opentelemetry-api>=1.20"]

# Explainer-shaped integrations (ADR 0006): each pulls in exactly one
# third-party library. Once installed, why() picks it up automatically
# and lazily the first time it's actually needed
# (src/whytrail/registry.py's _load_builtin_explainers()) -- installing
# the extra is the only step, no entry point or manual register() call.
requests = ["requests>=2.20"]
httpx = ["httpx>=0.27"]
aiohttp = ["aiohttp>=3.9"]
huggingface-hub = ["huggingface_hub>=0.20"]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.30"]
boto3 = ["boto3>=1.34"]
google-cloud = ["google-api-core>=2.15"]
sqlalchemy = ["sqlalchemy>=2.0"]
asyncpg = ["asyncpg>=0.29"]
pymongo = ["pymongo>=4.0"]
grpcio = ["grpcio>=1.60"]
pydantic = ["pydantic>=2.0"]
marshmallow = ["marshmallow>=3.0"]
jsonschema = ["jsonschema>=4.0"]
pyyaml = ["pyyaml>=6.0"]
pandas = ["pandas>=2.0"]
polars = ["polars>=0.20"]
stripe = ["stripe>=7.0"]
alembic = ["alembic>=1.7"]
paramiko = ["paramiko>=2.7"]
elasticsearch = ["elasticsearch>=8.0"]
pika = ["pika>=1.1"]
kubernetes = ["kubernetes>=18.20"]
azure-core = ["azure-core>=1.24"]

# Integration-shaped (hook/middleware/signal-based, ADR 0006): the extra
# only pulls in the dependency -- nothing auto-registers, since these
# need explicit wiring (an on_failure=[...] hook, a middleware class,
# before_send=...). See docs/plugin-guide.md.
sentry = ["sentry-sdk>=2.0"]
ddtrace = ["ddtrace>=2.0"]
celery = ["celery>=5.3"]
rq = ["rq>=1.15"]
dramatiq = ["dramatiq>=1.14"]
prefect = ["prefect>=2.14"]
scrapy = ["scrapy>=2.8"]
pytest = ["pytest>=7.0"]
fastapi = ["starlette>=0.36"]
django = ["django>=4.2"]
flask = ["flask>=2.3"]
langchain = ["langchain-core>=0.2"]

# Every integration above in one install, for trying whytrail broadly or
# CI matrices -- not meant as a typical user's default (see ADR 0006 for
# why each stays its own extra instead of always installing everything).
all = [
    "whytrail[requests,httpx,aiohttp,huggingface-hub,openai,anthropic,boto3,google-cloud,sqlalchemy,asyncpg,pymongo,grpcio,pydantic,marshmallow,jsonschema,pyyaml,pandas,polars,stripe,alembic,paramiko,elasticsearch,pika,kubernetes,azure-core,sentry,ddtrace,celery,rq,dramatiq,prefect,scrapy,pytest,fastapi,django,flask,langchain]",
]

dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-benchmark>=4.0",
    "hypothesis>=6.100",
    "rich>=13.0",
    "mypy>=1.10",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocs-include-markdown-plugin>=6.0",
]

[project.scripts]
whytrail = "whytrail.cli.__main__:main"

[project.entry-points.pytest11]
# pytest's own plugin discovery, independent of whytrail's registry --
# pytest scans this group at startup and loads the module unconditionally
# whenever whytrail is installed. Harmless without the `pytest` extra
# (the module only does anything once pytest itself is actually running,
# which means pytest is already present): a project that has both
# whytrail and pytest installed gets the failure-report integration
# automatically, with an opt-out flag (--no-whytrail) rather than a
# separate extra to remember. See ADR 0006 and
# src/whytrail/integrations/pytest_plugin.py.
whytrail = "whytrail.integrations.pytest_plugin"

[project.urls]
Homepage = "https://github.com/bhouvana/Whytrail"
Documentation = "https://bhouvana.github.io/Whytrail/"
Issues = "https://github.com/bhouvana/Whytrail/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/whytrail"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.mypy]
strict = true
files = ["src/whytrail"]
exclude = ["^src/whytrail/integrations/"]
python_version = "3.12"
# The 30 modules under integrations/ (ADR 0006) are excluded from this
# default scope and checked individually in CI instead, each with its
# own third-party stubs/dependency installed -- the same reason otel.py
# below needs an override rather than being expected to type-check
# without opentelemetry-api installed, just at 30x the scale, where a
# blanket exclude is more honest than 30 near-identical per-module
# overrides. This default scope covers what every contributor should run
# locally before a core PR.
#
# python_version pinned to 3.12, independent of whichever interpreter
# actually runs mypy: runtime/monitoring.py's sys.monitoring (PEP 669)
# calls are correctly gated behind `MONITORING_AVAILABLE = hasattr(sys,
# "monitoring")` and never reached on Python <3.12, but typeshed's own
# stub for `sys` only declares `monitoring` for python_version >= 3.12 --
# so mypy invoked from a 3.10/3.11 venv (as CI's `test` job matrix does,
# testing the *package* across 3.10-3.13) flagged every access as
# attr-defined even though the runtime guard is correct. Type-checking
# assumptions shouldn't vary with whichever venv happens to invoke mypy;
# pinning this to the newest version whose stubs cover this module's full
# surface decouples the two, the same way otel.py's override above
# decouples "this import is optional at runtime" from "mypy can resolve
# it." Found the same way as that fix: the first real CI run, which is
# the only place this project's mypy step had ever run under 3.10/3.11 --
# every local run all session used this sandbox's single 3.13 venv.

[[tool.mypy.overrides]]
# otel.py's import is deliberately optional at runtime (lazy import inside
# a try/except, see its own docstring) -- opentelemetry-api lives behind
# the separate `otel` extra, not `dev`, so it's genuinely not installed in
# the environment `pip install -e ".[dev]"` produces (core has zero
# required dependencies by design). Without this override mypy treats
# that as import-not-found and fails strict mode for everyone, including
# contributors who never touch OTel -- found by the first real CI run,
# where mypy passed locally only because an earlier, unrelated task in
# this environment had opentelemetry-api installed already.
module = "opentelemetry.*"
ignore_missing_imports = true

[tool.hatch.metadata]
allow-direct-references = true
