[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whytrail"
version = "0.3.1"
description = "Python tells you where. whytrail tells you why a value is the way it is."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "whytrail contributors" }]
keywords = ["debugging", "provenance", "explainability", "tracing", "exceptions"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Debuggers",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
rich = ["rich>=13.0"]
cli = ["rich>=13.0"]
otel = ["opentelemetry-api>=1.20"]

# Explainer-shaped integrations (ADR 0006): each pulls in exactly one
# third-party library. Once installed, why() picks it up automatically
# and lazily the first time it's actually needed
# (src/whytrail/registry.py's _load_builtin_explainers()) -- installing
# the extra is the only step, no entry point or manual register() call.
requests = ["requests>=2.20"]
httpx = ["httpx>=0.27"]
aiohttp = ["aiohttp>=3.9"]
huggingface-hub = ["huggingface_hub>=0.20"]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.30"]
boto3 = ["boto3>=1.34"]
google-cloud = ["google-api-core>=2.15"]
sqlalchemy = ["sqlalchemy>=2.0"]
asyncpg = ["asyncpg>=0.29"]
pymongo = ["pymongo>=4.0"]
grpcio = ["grpcio>=1.60"]
pydantic = ["pydantic>=2.0"]
marshmallow = ["marshmallow>=3.0"]
jsonschema = ["jsonschema>=4.0"]
pyyaml = ["pyyaml>=6.0"]
pandas = ["pandas>=2.0"]
polars = ["polars>=0.20"]
stripe = ["stripe>=7.0"]
alembic = ["alembic>=1.7"]
paramiko = ["paramiko>=2.7"]
elasticsearch = ["elasticsearch>=8.0"]
pika = ["pika>=1.1"]
kubernetes = ["kubernetes>=18.20"]
azure-core = ["azure-core>=1.24"]
sendgrid = ["sendgrid>=6.0"]
websockets = ["websockets>=12.0"]
opensearch = ["opensearch-py>=2.0"]
pyodbc = ["pyodbc>=4.0"]
google-genai = ["google-genai>=1.0"]
oracledb = ["oracledb>=2.0"]
confluent-kafka = ["confluent-kafka>=2.0"]
pymysql = ["pymysql>=1.0"]
pymssql = ["pymssql>=2.2"]
clickhouse = ["clickhouse-connect>=0.6"]
snowflake = ["snowflake-connector-python>=3.0"]
graphql-core = ["graphql-core>=3.2"]
tenacity = ["tenacity>=8.0"]
psycopg = ["psycopg>=3.1"]
cassandra = ["cassandra-driver>=3.25"]
influxdb = ["influxdb-client>=1.30"]
pyzmq = ["pyzmq>=24.0"]
zeep = ["zeep>=4.1"]

# Vector DBs / newer LLM SDKs (0.3.1, ecosystem push 63->100): each
# clears bar 1 (structured error data a bare traceback discards),
# confirmed against the real installed library's exception source, not
# assumed from documentation -- see CHANGELOG.md.
pinecone = ["pinecone>=6.0"]
weaviate-client = ["weaviate-client>=4.9"]
qdrant-client = ["qdrant-client>=1.10"]
neo4j = ["neo4j>=5.24"]
cohere = ["cohere>=5.0"]
mistralai = ["mistralai>=1.0"]

# SaaS / commerce APIs (0.3.1, ecosystem push 63->100): each carries a
# structured error body/taxonomy a bare traceback discards. Note:
# the `square` extra's PyPI distribution is `squareup` (the `square`
# name was already taken on PyPI) even though the import name is
# `square` -- confirmed by trying to install `square` directly and
# getting an unrelated package.
twilio = ["twilio>=8.0"]
slack-sdk = ["slack-sdk>=3.27"]
plaid = ["plaid-python>=18.0"]
docker = ["docker>=7.0"]
hvac = ["hvac>=2.0"]
square = ["squareup>=39.0"]

# Orchestration / messaging (0.3.1, ecosystem push 63->100). `ray`
# considered and dropped -- no installable wheel for this environment's
# Python/OS combination (same class of environment gap this project
# already documents for Selenium/Playwright's browser binaries), not
# assessed against ADR 0003's bars at all. `nats-py`'s own base client
# errors (`nats.errors`) were checked and are almost entirely GENERIC --
# only its separate JetStream API error hierarchy (`nats.js.errors`)
# clears bar 1, see src/whytrail/integrations/nats.py.
temporalio = ["temporalio>=1.7"]
dagster = ["dagster>=1.7"]
discord-py = ["discord.py>=2.3"]
nats-py = ["nats-py>=2.7"]

# Infra / DB (0.3.1, ecosystem push 63->100). `transformers` considered
# and rejected -- see registry.py's _BUILTIN_EXPLAINERS comment: its
# error types are the same objects as huggingface_hub's, already
# covered by that extra.
firebase-admin = ["firebase-admin>=6.0"]
minio = ["minio>=7.2"]
arango = ["python-arango>=7.9"]
supabase = ["supabase>=2.0"]

# Identity / observability / search / MLOps (0.3.1, ecosystem push
# 63->100). `typesense`/`duckdb` considered and rejected as GENERIC --
# see registry.py's _BUILTIN_EXPLAINERS comment. `pagerduty` supersedes
# the deprecated `pdpyras` (deprecated 2025-06-20).
auth0 = ["auth0-python>=4.0"]
pagerduty = ["pagerduty>=1.0"]
algoliasearch = ["algoliasearch>=3.0"]
mlflow = ["mlflow>=2.10"]
meilisearch = ["meilisearch>=0.31"]
github = ["PyGithub>=2.1"]
okta = ["okta>=2.9"]
chromadb = ["chromadb>=0.5"]
wandb = ["wandb>=0.16"]

# Final round closing the 63->100 gap (0.3.1). `cloudinary`,
# `pyairtable`, `launchdarkly-server-sdk`, `mixpanel`, and
# `hubspot-api-client` considered and rejected -- see registry.py's
# _BUILTIN_EXPLAINERS comment for why each doesn't clear the bar.
datadog-api-client = ["datadog-api-client>=2.20"]
postmarker = ["postmarker>=1.0"]
simple-salesforce = ["simple-salesforce>=1.12"]
zenpy = ["zenpy>=2.0"]
notion-client = ["notion-client>=2.0"]
dropbox = ["dropbox>=11.36"]
asana = ["asana>=5.0"]

# Integration-shaped (hook/middleware/signal-based, ADR 0006): the extra
# only pulls in the dependency -- nothing auto-registers, since these
# need explicit wiring (an on_failure=[...] hook, a middleware class,
# before_send=...). See docs/plugin-guide.md.
sentry = ["sentry-sdk>=2.0"]
ddtrace = ["ddtrace>=2.0"]
celery = ["celery>=5.3"]
rq = ["rq>=1.15"]
dramatiq = ["dramatiq>=1.14"]
prefect = ["prefect>=2.14"]
scrapy = ["scrapy>=2.8"]
pytest = ["pytest>=7.0"]
fastapi = ["starlette>=0.36"]
django = ["django>=4.2"]
flask = ["flask>=2.3"]
langchain = ["langchain-core>=0.2"]
newrelic = ["newrelic>=9.0"]
rollbar = ["rollbar>=1.0"]
honeybadger = ["honeybadger>=0.15"]
elastic-apm = ["elastic-apm>=6.15"]
bugsnag = ["bugsnag>=4.5"]
structlog = ["structlog>=23.1"]
loguru = ["loguru>=0.7"]
# stdlib `logging` needs no extra -- whytrail.integrations.logging has
# no third-party dependency, only whytrail itself.
aiohttp-server = ["aiohttp>=3.9"]

# Every integration above in one install, for trying whytrail broadly or
# CI matrices -- not meant as a typical user's default (see ADR 0006 for
# why each stays its own extra instead of always installing everything).
all = [
    "whytrail[requests,httpx,aiohttp,huggingface-hub,openai,anthropic,boto3,google-cloud,sqlalchemy,asyncpg,pymongo,grpcio,pydantic,marshmallow,jsonschema,pyyaml,pandas,polars,stripe,alembic,paramiko,elasticsearch,pika,kubernetes,azure-core,sendgrid,websockets,opensearch,pyodbc,google-genai,oracledb,confluent-kafka,pymysql,pymssql,clickhouse,snowflake,graphql-core,tenacity,psycopg,cassandra,influxdb,pyzmq,zeep,pinecone,weaviate-client,qdrant-client,neo4j,cohere,mistralai,twilio,slack-sdk,plaid,docker,hvac,square,temporalio,dagster,discord-py,nats-py,firebase-admin,minio,arango,supabase,auth0,pagerduty,algoliasearch,mlflow,meilisearch,github,okta,chromadb,wandb,datadog-api-client,postmarker,simple-salesforce,zenpy,notion-client,dropbox,asana,sentry,ddtrace,celery,rq,dramatiq,prefect,scrapy,pytest,fastapi,django,flask,langchain,newrelic,rollbar,honeybadger,elastic-apm,bugsnag,structlog,loguru,aiohttp-server]",
]

dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-benchmark>=4.0",
    "hypothesis>=6.100",
    "rich>=13.0",
    "mypy>=1.10",
    # click/jinja2: test-only tools for tests/integration/test_provenance_boundaries.py
    # (ADR 0012's counterexample sweep) -- not whytrail integrations, no
    # explainer plugin exists or is planned for either. Listed in dev
    # rather than left to only ever run when a contributor happens to
    # have them installed locally: without this, the core CI `test` job
    # (which installs exactly `.[dev]`) would silently skip these tests
    # via their own pytest.importorskip(), the same gap several
    # pre-existing tests elsewhere in this suite already have.
    "click>=8.0",
    "jinja2>=3.0",
    "ruff>=0.6",
    # requests: three tests (test_a_builtin_explainer_actually_registers_and_wins_over_tier_1,
    # test_list_builtin_plugins_reports_a_real_dev_dependency_as_available,
    # test_cli_plugins_json_is_valid_and_has_the_expected_shape) exercise
    # the real builtin-explainer load path end to end against "a real dev
    # dependency," on the assumption requests was already one -- it
    # wasn't (only listed under the separate `all` extra), so all three
    # failed the moment the core CI `test` job ran for real with only
    # `.[dev]` installed, never caught locally where every extra already
    # happened to be present together. requests is lightweight with no
    # heavy transitive dependencies, unlike most of `all`'s other 60
    # entries, so it's a reasonable one to promote here rather than
    # rewrite those tests to skip when it's absent -- skipping would
    # defeat their whole point of running in the always-run suite.
    "requests>=2.25",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocs-include-markdown-plugin>=6.0",
]

[project.scripts]
whytrail = "whytrail.cli.__main__:main"

[project.entry-points.pytest11]
# pytest's own plugin discovery, independent of whytrail's registry --
# pytest scans this group at startup and loads the module unconditionally
# whenever whytrail is installed. Harmless without the `pytest` extra
# (the module only does anything once pytest itself is actually running,
# which means pytest is already present): a project that has both
# whytrail and pytest installed gets the failure-report integration
# automatically, with an opt-out flag (--no-whytrail) rather than a
# separate extra to remember. See ADR 0006 and
# src/whytrail/integrations/pytest_plugin.py.
whytrail = "whytrail.integrations.pytest_plugin"

[project.urls]
Homepage = "https://github.com/bhouvana/Whytrail"
Documentation = "https://bhouvana.github.io/Whytrail/"
Issues = "https://github.com/bhouvana/Whytrail/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/whytrail"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.mypy]
strict = true
files = ["src/whytrail"]
exclude = ["^src/whytrail/integrations/"]
python_version = "3.12"
# The 30 modules under integrations/ (ADR 0006) are excluded from this
# default scope and checked individually in CI instead, each with its
# own third-party stubs/dependency installed -- the same reason otel.py
# below needs an override rather than being expected to type-check
# without opentelemetry-api installed, just at 30x the scale, where a
# blanket exclude is more honest than 30 near-identical per-module
# overrides. This default scope covers what every contributor should run
# locally before a core PR.
#
# python_version pinned to 3.12, independent of whichever interpreter
# actually runs mypy: runtime/monitoring.py's sys.monitoring (PEP 669)
# calls are correctly gated behind `MONITORING_AVAILABLE = hasattr(sys,
# "monitoring")` and never reached on Python <3.12, but typeshed's own
# stub for `sys` only declares `monitoring` for python_version >= 3.12 --
# so mypy invoked from a 3.10/3.11 venv (as CI's `test` job matrix does,
# testing the *package* across 3.10-3.13) flagged every access as
# attr-defined even though the runtime guard is correct. Type-checking
# assumptions shouldn't vary with whichever venv happens to invoke mypy;
# pinning this to the newest version whose stubs cover this module's full
# surface decouples the two, the same way otel.py's override above
# decouples "this import is optional at runtime" from "mypy can resolve
# it." Found the same way as that fix: the first real CI run, which is
# the only place this project's mypy step had ever run under 3.10/3.11 --
# every local run all session used this sandbox's single 3.13 venv.

[[tool.mypy.overrides]]
# otel.py's import is deliberately optional at runtime (lazy import inside
# a try/except, see its own docstring) -- opentelemetry-api lives behind
# the separate `otel` extra, not `dev`, so it's genuinely not installed in
# the environment `pip install -e ".[dev]"` produces (core has zero
# required dependencies by design). Without this override mypy treats
# that as import-not-found and fails strict mode for everyone, including
# contributors who never touch OTel -- found by the first real CI run,
# where mypy passed locally only because an earlier, unrelated task in
# this environment had opentelemetry-api installed already.
module = "opentelemetry.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# The per-extra `mypy --strict` CI step (plugin-contract-tests job)
# type-checks each integration file in an environment with only that
# one extra installed -- genuinely revealing, for the first time on
# real CI, that these 17 third-party libraries ship no inline types
# (py.typed) and have no stub package installed there either. Every
# one of these reproduced locally too once actually run in isolation
# (`mypy --strict src/whytrail/integrations/boto3.py`) -- this session's
# earlier "mypy clean on integrations/" pass simply never ran each file
# standalone, only in a dev venv where dozens of other extras were
# already installed together, which never surfaces a *specific* file's
# own missing-stub situation. Same fix as the opentelemetry.* override
# above, at 17x the scale: whytrail's own code in each of these files is
# still fully strict-checked, just without also verifying against a
# type surface these libraries don't publish.
module = [
    "botocore", "botocore.*",
    "django", "django.*",
    "celery", "celery.*",
    "grpc", "grpc.*",
    "pandas", "pandas.*",
    "jsonschema", "jsonschema.*",
    "asyncpg", "asyncpg.*",
    "pika", "pika.*",
    "yaml", "yaml.*",
    "kubernetes", "kubernetes.*",
    "pyodbc", "pyodbc.*",
    "python_http_client", "python_http_client.*",
    "pymysql", "pymysql.*",
    "paramiko", "paramiko.*",
    "newrelic", "newrelic.*",
    "honeybadger", "honeybadger.*",
    "cassandra", "cassandra.*",
    # Added for the 0.3.1 ecosystem push (63->100): same missing-stub
    "twilio", "twilio.*",
    "plaid", "plaid.*",
    "docker", "docker.*",
    "hvac", "hvac.*",
    "firebase_admin", "firebase_admin.*",
    "postmarker", "postmarker.*",
    "zenpy", "zenpy.*",
    "dropbox", "dropbox.*",
    "asana", "asana.*",
]
ignore_missing_imports = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
# Matches requires-python above -- without this, ruff assumes its own
# default target version and flags BaseExceptionGroup (3.11+) as an
# undefined name in tests that already gate on Python 3.11+ features
# correctly at runtime; this isn't a real error, just ruff not knowing
# what version this project actually targets.
target-version = "py310"
# 130, not the more common 120/100: this codebase's narrative-style
# comments and this file's own long guidance-string lookup tables
# (_EXCEPTION_GLOSS/_EXCEPTION_FIXES) naturally run long, and forcing
# every one to wrap would hurt readability for no real gain -- the
# three lines that still exceeded even this were genuinely worth
# reformatting and were fixed directly instead of raising the limit
# further to dodge them.
line-length = 130

[tool.ruff.lint]
select = ["E", "F", "W"]
# E741 (ambiguous variable names like `l`) is real and worth keeping on;
# fixed at every site found rather than suppressed.

[tool.mutmut]
# Scoped to core/ deliberately, not the whole package: mutation testing
# answers "does the test suite actually detect wrong behavior," which
# matters most for the engine every other consumer (63 integrations,
# the CLI, every renderer) sits on top of -- not "every module," which
# would multiply runtime by 63 integrations' worth of mutants for a
# question this scope already answers about the shared foundation.
# mutmut has no native Windows support (requires WSL there, see its own
# CLI message); this repo's CI runs on ubuntu-latest, where it works
# directly with no translation needed.
source_paths = ["src/whytrail/core"]
# also_copy: mutmut copies only source_paths into an isolated mutants/
# sandbox per run and mutates only those files -- but `import whytrail`
# itself needs the rest of the top-level package's non-integration
# modules to resolve (whytrail/__init__.py imports from _repr,
# registry, protocols, hook, runtime/, explainers/). Listed here so
# they're present (unmutated) in the sandbox, without inflating mutant
# count with the 63 integrations/ modules or cli/, which aren't the
# safety-critical shared engine this scope is about. Found by running
# this for real: a first attempt with just source_paths="core" copied
# an incomplete package and every test importing `whytrail` itself
# failed at collection, not from a real bug.
also_copy = [
    "src/whytrail/__init__.py",
    "src/whytrail/_repr.py",
    "src/whytrail/registry.py",
    "src/whytrail/protocols.py",
    "src/whytrail/hook.py",
    "src/whytrail/runtime",
    "src/whytrail/explainers",
]
# -p no:whytrail: whytrail's own pytest11 entry point
# (whytrail.integrations.pytest_plugin) auto-loads whenever pytest runs
# with whytrail installed, regardless of source_paths/also_copy --
# integrations/ genuinely isn't copied into the sandbox, so that
# specific plugin can't import there. Disabling it for this run is
# harmless: mutation testing doesn't need its failure-report
# enhancement.
pytest_add_cli_args = ["-p", "no:whytrail"]
pytest_add_cli_args_test_selection = [
    "tests/unit/test_graph.py",
    "tests/unit/test_explanation.py",
    "tests/unit/test_serialize.py",
    "tests/unit/test_negative_inputs.py",
    "tests/unit/test_chaos_and_recovery.py",
    "tests/integration/test_graph_soak.py",
    "tests/integration/test_stateful_graph.py",
]
