[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whytrail-anthropic"
version = "0.1.0"
description = "whytrail explainer for the anthropic SDK's APIStatusError/APIConnectionError"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = ["whytrail", "anthropic>=0.30"]

[project.entry-points."whytrail.explainers"]
anthropic = "whytrail_anthropic:register"

[tool.hatch.build.targets.wheel]
packages = ["src/whytrail_anthropic"]
