[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whytrail-asyncpg"
version = "0.1.0"
description = "whytrail explainer for asyncpg PostgresError (sqlstate, constraint, detail)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = ["whytrail", "asyncpg>=0.29"]

[project.entry-points."whytrail.explainers"]
asyncpg = "whytrail_asyncpg:register"

[tool.hatch.build.targets.wheel]
packages = ["src/whytrail_asyncpg"]
