[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whytrail-boto3"
version = "0.1.0"
description = "whytrail explainer for botocore ClientError (structured AWS error responses)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = ["whytrail", "boto3>=1.34"]

[project.entry-points."whytrail.explainers"]
boto3 = "whytrail_boto3:register"

[tool.hatch.build.targets.wheel]
packages = ["src/whytrail_boto3"]
