[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whytrail-celery"
version = "0.1.0"
description = "Log a whytrail explanation on every Celery task failure"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = ["whytrail", "celery>=5.3"]

[tool.hatch.build.targets.wheel]
packages = ["src/whytrail_celery"]
