[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whytrail-ddtrace"
version = "0.1.0"
description = "Attach whytrail explanations to the current ddtrace span"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = ["whytrail", "ddtrace>=2.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/whytrail_ddtrace"]
