[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whytrail-django"
version = "0.1.0"
description = "Safe-by-default whytrail exception middleware for Django"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = ["whytrail", "django>=4.2"]

[tool.hatch.build.targets.wheel]
packages = ["src/whytrail_django"]
