[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whytrail-dramatiq"
version = "0.1.0"
description = "Log a whytrail explanation on every dramatiq actor failure"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = ["whytrail", "dramatiq>=1.14"]

[tool.hatch.build.targets.wheel]
packages = ["src/whytrail_dramatiq"]
