[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whytrail-fastapi"
version = "0.1.0"
description = "Safe-by-default whytrail exception handler for FastAPI/Starlette"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = ["whytrail", "starlette>=0.36"]

[tool.hatch.build.targets.wheel]
packages = ["src/whytrail_fastapi"]
