[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whytrail-flask"
version = "0.1.0"
description = "Safe-by-default whytrail exception handler for Flask"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = ["whytrail", "flask>=2.3"]

[tool.hatch.build.targets.wheel]
packages = ["src/whytrail_flask"]
