[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whytrail-google-cloud"
version = "0.1.0"
description = "whytrail explainer for google.api_core.exceptions.GoogleAPICallError"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = ["whytrail", "google-api-core>=2.15"]

[project.entry-points."whytrail.explainers"]
google_cloud = "whytrail_google_cloud:register"

[tool.hatch.build.targets.wheel]
packages = ["src/whytrail_google_cloud"]
