[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whytrail-grpcio"
version = "0.1.0"
description = "whytrail explainer for grpc.RpcError (status code, details)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = ["whytrail", "grpcio>=1.60"]

[project.entry-points."whytrail.explainers"]
grpcio = "whytrail_grpcio:register"

[tool.hatch.build.targets.wheel]
packages = ["src/whytrail_grpcio"]
