[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whytrail-httpx"
version = "0.1.0"
description = "whytrail explainer for httpx HTTPStatusError/RequestError"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = ["whytrail", "httpx>=0.27"]

[project.entry-points."whytrail.explainers"]
httpx = "whytrail_httpx:register"

[tool.hatch.build.targets.wheel]
packages = ["src/whytrail_httpx"]
