[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whytrail-huggingface-hub"
version = "0.1.0"
description = "whytrail explainer for huggingface_hub's HfHubHTTPError"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = ["whytrail", "huggingface_hub>=0.20"]

[project.entry-points."whytrail.explainers"]
huggingface_hub = "whytrail_huggingface_hub:register"

[tool.hatch.build.targets.wheel]
packages = ["src/whytrail_huggingface_hub"]
