[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whytrail-marshmallow"
version = "0.1.0"
description = "whytrail explainer for marshmallow ValidationError (per-field messages)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = ["whytrail", "marshmallow>=3.0"]

[project.entry-points."whytrail.explainers"]
marshmallow = "whytrail_marshmallow:register"

[tool.hatch.build.targets.wheel]
packages = ["src/whytrail_marshmallow"]
