[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whytrail-openai"
version = "0.1.0"
description = "whytrail explainer for the openai SDK's APIStatusError/APIConnectionError"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = ["whytrail", "openai>=1.0"]

[project.entry-points."whytrail.explainers"]
openai = "whytrail_openai:register"

[tool.hatch.build.targets.wheel]
packages = ["src/whytrail_openai"]
