[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whytrail-pandas"
version = "0.1.0"
description = "whytrail diagnostic explainer for untracked pandas DataFrame/Series"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = ["whytrail", "pandas>=2.0"]

[project.entry-points."whytrail.explainers"]
pandas = "whytrail_pandas:register"

[tool.hatch.build.targets.wheel]
packages = ["src/whytrail_pandas"]
