[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whytrail-polars"
version = "0.1.0"
description = "whytrail diagnostic explainer for untracked polars DataFrame/Series"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = ["whytrail", "polars>=0.20"]

[project.entry-points."whytrail.explainers"]
polars = "whytrail_polars:register"

[tool.hatch.build.targets.wheel]
packages = ["src/whytrail_polars"]
