[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whytrail-prefect"
version = "0.1.0"
description = "Log a whytrail explanation on Prefect task/flow failure"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = ["whytrail", "prefect>=2.14"]

[tool.hatch.build.targets.wheel]
packages = ["src/whytrail_prefect"]
