[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whytrail-pymongo"
version = "0.1.0"
description = "whytrail explainer for pymongo PyMongoError (code, details)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = ["whytrail", "pymongo>=4.0"]

[project.entry-points."whytrail.explainers"]
pymongo = "whytrail_pymongo:register"

[tool.hatch.build.targets.wheel]
packages = ["src/whytrail_pymongo"]
