[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whytrail-pytest"
version = "0.1.0"
description = "whytrail explanations attached to pytest failure reports"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = ["whytrail", "pytest>=7.0"]

[project.entry-points.pytest11]
whytrail = "whytrail_pytest.plugin"

[tool.hatch.build.targets.wheel]
packages = ["src/whytrail_pytest"]
